--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,53 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.img {
+  width: 25% !important;
+}
+
+.main {
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+  align-content: center;
+  width: 100%;
+}
+
+.login {
+  margin-top: 10%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.half {
+  width: 50%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+
+.home {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-content: center;
+  height: 80vh;
+  align-items: center;
+
+}
+
+.header {
+  margin-top: 30px;
+}
+
+.custom-card{
+  padding: 5%;
+}
+
+.buttons button {
+  margin: 5px;
 }
