--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,8 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
 .App-header {
-  background-color: #282c34;
+  background-color: #010C5E;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -17,213 +11,4 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-.sidedraw{
-  position: fixed;
-  width: 280px;
-  max-width: 70%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  z-index: 200;
-  background-color: #282c34;
-  padding-top: 50px;
-  box-sizing: border-box;
-  transition: transform 0.3s ease-out;
-  color: white;
-}
-
-.sidedraw ul {
-  margin: 0;
-  padding: 0;
-}
-
-.open {
-  transform: translateX(0);
-}
-
-.close {
-  transform: translateX(-100%);
-}
-
-.backdrop {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  z-index: 100;
-  top:0;
-  left: 0;
-  background: rgba(0, 0, 0, 50%);
-}
-
-.link {
-  text-decoration: none;
-  list-style: none;
-  padding: 5px;
-  border-bottom: 1px solid white;
-  width: 100%;
-}
-
-.link a {
-  color: white;
-  text-decoration: none;
-}
-
-.hamburger {
-  position: absolute;
-  cursor: pointer;
-  right: 60%;
-  top: 50%;
-  transform: translate(-5%, -50%);
-  z-index: 2;
-}
-
-.line {
-        width: 30px;
-        height: 3px;
-        background: white;
-        margin: 5px;
-}
-
-.navTitle {
-  display: flex;
-  color: white;
-  width: 100%;
-  height: 100%;
-  justify-content: center;
-  align-content: center;
-  align-items: center;
-}
-
-.full {
-  width: 100%;
-}
-
-.cl {
-  color: white;
-  text-decoration: none;
-}
-
-.cl:hover {
-  text-decoration: none;
-  color: white;
-}
-
-.login-form {
-  padding: 30px;
-}
-
-.search {
-  margin: 30px;
-}
-
-.search input{
-  padding: 2px;
-  border: 0;
-  outline: none;
-  border-bottom: 2px solid black;
-}
-
-.isNotEmpty input {
-  animation-name: changeColor;
-  animation-duration: 0.5s;
-  animation-timing-function: ease-in-out;
-  animation-fill-mode: forwards;
-}
-
-.lista-maestros {
-  padding: 30px;
-}
-
-.maestro-info {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-  margin-top: 2%;
-}
-
-.maestro-info button {
-  margin: 5px;
-}
-
-
-
-.materias {
-  list-style: none;
-  width: 100%;
-  padding: 0;
-  margin: 0;
-}
-
-.pointer {
-  cursor: pointer;
-
-}
-
-.pointer:hover {
-  color: white;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-.custom-card-profile {
-  width: 60%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-content: center;
-  align-items: center;
-}
-
-.card {
-  padding:0 20px 0 20px;
-  margin: 10px;
-}
-
-.custom-profile {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-content: center;
-  align-items: center;
-}
-
-.profile {
-  padding: 0;
-  margin: 0;
-  list-style: decimal;
-}
-
-.archivos {
-  width: 80%;
-  display: flex;
-  flex-direction: column;
-}
-
-
-@media screen and (max-width: 768px) {
-
-  .hamburger {
-    right: 25%;
-  }
-
-}
-
-@keyframes changeColor {
-  0% {
-    border-bottom-color: #61dafb;
-  }
-  50% {
-    border-bottom-color: aqua;
-  }
-  100% {
-    border-bottom-color: blue;
-  }
 }
